--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-popup-dialog": "^0.16.6",
     "react-native-router-flux": "^4.0.6",
     "react-native-side-menu": "^1.1.3",
+    "react-native-snap-carousel": "^3.7.5",
     "react-native-swiper": "^1.5.14",
     "react-native-tabbar-bottom": "^1.0.4",
     "react-native-vector-icons": "^6.1.0",
