--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-app-intro-slider": "^1.0.1",
+    "react-native-camera": "^1.8.0",
     "react-native-code-input": "^1.0.6",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^0.19.1",
@@ -23,6 +24,7 @@
     "react-native-picker-select": "^5.2.0",
     "react-native-pin-code": "^0.5.3",
     "react-native-popup-dialog": "^0.16.6",
+    "react-native-qrcode-scanner": "^1.1.2",
     "react-native-router-flux": "^4.0.6",
     "react-native-side-menu": "^1.1.3",
     "react-native-snap-carousel": "^3.7.5",
